Updating the normal distributin

--- a/praca_inz/notebooks/data_preparation.ipynb
+++ b/praca_inz/notebooks/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,14 +490,16 @@
     "    for chunk in chunks:\n",
     "        max = 0\n",
     "        buffer = []\n",
+    "        choice = []\n",
     "        for perm in permutations(values, len(chunk)):\n",
-    "            buffer = data + flatten([[perm[i]] * chunk[i] for i in range(len(chunk))])\n",
-    "            stats = shapiro(buffer).statistic\n",
+    "            buffer = flatten([[perm[i]] * chunk[i] for i in range(len(chunk))])\n",
+    "            stats = shapiro(data + buffer).statistic\n",
     "            if max < stats:\n",
     "                max = stats\n",
-    "                buffer = perm\n",
+    "                choice = buffer\n",
     "        # print(max)\n",
-    "        chosen += buffer\n",
+    "        chosen += choice\n",
+    "        data += choice\n",
     "    if decoder:\n",
     "        chosen = [decoder[i] for i in chosen]\n",
     "    print(max)\n",
@@ -506,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9423290491104126\n"
+      "0.9423934817314148\n"
      ]
     },
     {
@@ -536,7 +538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9362279176712036\n"
+      "0.9557841420173645\n"
      ]
     },
     {
@@ -551,7 +553,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9179631471633911\n"
+      "0.9204141497612\n"
      ]
     }
    ],
@@ -588,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +624,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,16 +811,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([34., 36., 32., 44., 38., 42., 40., 46., 30., 48., 28.])"
+       "array([34., 36., 32., 46., 38., 42., 40., 44., 30., 48., 28.])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,17 +831,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['d', 'b', 'e', 'c', 'f', 'g', 'i', 'a', 'aa', 'j', 'k', 'h'],\n",
+       "array(['d', 'b', 'e', 'c', 'f', 'g', 'i', 'a', 'k', 'h', 'aa', 'j'],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +901,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
