--- a/praca_inz/notebooks/data_preparation.ipynb
+++ b/praca_inz/notebooks/data_preparation.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "Name: shoe_size, dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1133,6 +1133,7 @@
     "    kl = distribution_based_creation(data, [test_subjects[i] for i in test_subjects.keys()], data.keys())\n",
     "\n",
     "    dicto = {idx: kl[i] for i, idx in enumerate(test_subjects.keys())}\n",
+    "    # dicto = {idx: kl[i] for i, idx in enumerate(test_subjects[test_subjects <= 1].keys())}\n",
     "    # dicto.update({idx: uniq[i%len(uniq)] for i, idx in enumerate(test_subjects[test_subjects <= 1].keys())})\n",
     "    dicto.update({natives['user_id'][i]: natives[col][i] for i in natives.index})\n",
     "    change = [dicto[idx] for idx in df_records['user_id']]\n",
@@ -1148,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1181,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1267,7 @@
        "      <td>5ft 2in</td>\n",
        "      <td>small</td>\n",
        "      <td>587883</td>\n",
-       "      <td>10.5</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1275,7 +1276,7 @@
        "      <td>7</td>\n",
        "      <td>2.0</td>\n",
        "      <td>b</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>37.0</td>\n",
        "      <td>32.0</td>\n",
        "      <td>new</td>\n",
        "      <td>NaN</td>\n",
@@ -1291,14 +1292,14 @@
        "      <td>21</td>\n",
        "      <td>5.0</td>\n",
        "      <td>e</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>46.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>36.0</td>\n",
        "      <td>new</td>\n",
        "      <td>NaN</td>\n",
        "      <td>5ft 4in</td>\n",
        "      <td>fit</td>\n",
        "      <td>875643</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1324,19 +1325,19 @@
        "   item_id  waist  size  quality cup_size  hips  bra_size category bust  \\\n",
        "0   123373   29.0     7      4.0        d  38.0      34.0      new   36   \n",
        "1   123373   31.0    13      3.0        b  30.0      36.0      new  NaN   \n",
-       "2   123373   30.0     7      2.0        b  30.0      32.0      new  NaN   \n",
-       "3   123373    NaN    21      5.0        e  42.0      46.0      new  NaN   \n",
+       "2   123373   30.0     7      2.0        b  37.0      32.0      new  NaN   \n",
+       "3   123373    NaN    21      5.0        e  50.0      36.0      new  NaN   \n",
        "4   123373    NaN    18      4.0        b  34.0      36.0      new  NaN   \n",
        "\n",
        "    height    fit  user_id  shoe_size  \n",
        "0  5ft 6in  small   991571        8.0  \n",
-       "1  5ft 2in  small   587883       10.5  \n",
+       "1  5ft 2in  small   587883        7.0  \n",
        "2  5ft 7in  small   395665        9.0  \n",
-       "3  5ft 4in    fit   875643        8.0  \n",
+       "3  5ft 4in    fit   875643        9.0  \n",
        "4  5ft 2in  small   944840        8.5  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1447,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1512,7 @@
        "      <td>5ft 6in</td>\n",
        "      <td>small</td>\n",
        "      <td>991571</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1527,7 +1528,7 @@
        "      <td>5ft 2in</td>\n",
        "      <td>small</td>\n",
        "      <td>587883</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1536,7 +1537,7 @@
        "      <td>7</td>\n",
        "      <td>2.0</td>\n",
        "      <td>b</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>37.0</td>\n",
        "      <td>32.0</td>\n",
        "      <td>new</td>\n",
        "      <td>84.5</td>\n",
@@ -1552,14 +1553,14 @@
        "      <td>21</td>\n",
        "      <td>5.0</td>\n",
        "      <td>e</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>46.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>36.0</td>\n",
        "      <td>new</td>\n",
-       "      <td>126.0</td>\n",
+       "      <td>101.0</td>\n",
        "      <td>5ft 4in</td>\n",
        "      <td>fit</td>\n",
        "      <td>875643</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1568,14 +1569,14 @@
        "      <td>18</td>\n",
        "      <td>4.0</td>\n",
        "      <td>b</td>\n",
-       "      <td>35.0</td>\n",
+       "      <td>34.0</td>\n",
        "      <td>36.0</td>\n",
        "      <td>new</td>\n",
        "      <td>95.5</td>\n",
        "      <td>5ft 2in</td>\n",
        "      <td>small</td>\n",
        "      <td>944840</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1585,19 +1586,19 @@
        "   item_id  waist  size  quality cup_size  hips  bra_size category   bust  \\\n",
        "0   123373   29.0     7      4.0        d  38.0      34.0      new   94.0   \n",
        "1   123373   31.0    13      3.0        b  30.0      36.0      new   95.0   \n",
-       "2   123373   30.0     7      2.0        b  30.0      32.0      new   84.5   \n",
-       "3   123373    NaN    21      5.0        e  42.0      46.0      new  126.0   \n",
-       "4   123373    NaN    18      4.0        b  35.0      36.0      new   95.5   \n",
+       "2   123373   30.0     7      2.0        b  37.0      32.0      new   84.5   \n",
+       "3   123373    NaN    21      5.0        e  50.0      36.0      new  101.0   \n",
+       "4   123373    NaN    18      4.0        b  34.0      36.0      new   95.5   \n",
        "\n",
        "    height    fit  user_id  shoe_size  \n",
-       "0  5ft 6in  small   991571        NaN  \n",
-       "1  5ft 2in  small   587883        NaN  \n",
+       "0  5ft 6in  small   991571        8.0  \n",
+       "1  5ft 2in  small   587883        7.0  \n",
        "2  5ft 7in  small   395665        9.0  \n",
-       "3  5ft 4in    fit   875643        NaN  \n",
-       "4  5ft 2in  small   944840        NaN  "
+       "3  5ft 4in    fit   875643        9.0  \n",
+       "4  5ft 2in  small   944840        8.5  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -1798,11 +1799,12 @@
     "    natives = df_records[df_records[col].notnull()][['user_id',col]]\n",
     "    uniq = df_records[df_records[col].notnull()][col].unique()\n",
     "    \n",
-    "    # dist = conditional_distribution_based_creation(dependancy_sets, [test_subjects[i] for i in test_subjects[test_subjects > 1].keys()], [df_records[df_records['user_id']==idx]['hips'].unique()[0] for idx in test_subjects[test_subjects > 1].keys()])\n",
-    "    dist = conditional_distribution_based_creation(dependancy_sets, [test_subjects[i] for i in test_subjects.keys()], [df_records[df_records['user_id']==idx]['hips'].unique()[0] for idx in test_subjects.keys()])\n",
+    "    # dist = conditional_distribution_based_creation(dependancy_sets, [test_subjects[i] for i in test_subjects.keys()], [df_records[df_records['user_id']==idx]['hips'].unique()[0] for idx in test_subjects.keys()])\n",
+    "    dist = conditional_distribution_based_creation(dependancy_sets, [test_subjects[i] for i in test_subjects[test_subjects > 1].keys()], [df_records[df_records['user_id']==idx]['hips'].unique()[0] for idx in test_subjects[test_subjects > 1].keys()])\n",
     "\n",
-    "    dicto = {idx: dist[i] for i, idx in enumerate(test_subjects.keys())}\n",
-    "    # dicto.update({idx: uniq[i%len(uniq)] for i, idx in enumerate(test_subjects[test_subjects <= 1].keys())})\n",
+    "    # dicto = {idx: dist[i] for i, idx in enumerate(test_subjects.keys())}\n",
+    "    dicto = {idx: dist[i] for i, idx in enumerate(test_subjects[test_subjects > 1].keys())}\n",
+    "    dicto.update({idx: uniq[i%len(uniq)] for i, idx in enumerate(test_subjects[test_subjects <= 1].keys())})\n",
     "    dicto.update({natives['user_id'][i]: natives[col][i] for i in natives.index})\n",
     "    change = [dicto[idx] for idx in df_records['user_id']]\n",
     "    df_records[col] = change"
@@ -1817,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1856,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.388885</td>\n",
+       "      <td>-0.514924</td>\n",
        "      <td>-0.684438</td>\n",
        "      <td>0.034406</td>\n",
        "      <td>-0.404745</td>\n",
@@ -1865,7 +1867,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.015562</td>\n",
+       "      <td>-0.235410</td>\n",
        "      <td>0.040909</td>\n",
        "      <td>-0.983637</td>\n",
        "      <td>-1.777621</td>\n",
@@ -1876,7 +1878,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.202223</td>\n",
+       "      <td>-0.375167</td>\n",
        "      <td>-0.684438</td>\n",
        "      <td>-2.001679</td>\n",
        "      <td>-0.576354</td>\n",
@@ -1887,7 +1889,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.664395</td>\n",
+       "      <td>1.022405</td>\n",
        "      <td>1.008039</td>\n",
        "      <td>1.052449</td>\n",
        "      <td>1.654570</td>\n",
@@ -1898,7 +1900,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.762209</td>\n",
+       "      <td>-0.794438</td>\n",
        "      <td>0.645365</td>\n",
        "      <td>0.034406</td>\n",
        "      <td>-1.091183</td>\n",
@@ -1913,11 +1915,11 @@
       ],
       "text/plain": [
        "      waist      size   quality      hips  bra_size    height      bust  \\\n",
-       "0 -0.388885 -0.684438  0.034406 -0.404745 -0.611557  0.306343 -0.456166   \n",
-       "1 -0.015562  0.040909 -0.983637 -1.777621  0.008607 -1.103900 -0.349617   \n",
-       "2 -0.202223 -0.684438 -2.001679 -0.576354 -1.231720  0.658904 -1.468378   \n",
-       "3  1.664395  1.008039  1.052449  1.654570  0.008607 -0.398778  0.289674   \n",
-       "4 -0.762209  0.645365  0.034406 -1.091183  0.008607 -1.103900 -0.296343   \n",
+       "0 -0.514924 -0.684438  0.034406 -0.404745 -0.611557  0.306343 -0.456166   \n",
+       "1 -0.235410  0.040909 -0.983637 -1.777621  0.008607 -1.103900 -0.349617   \n",
+       "2 -0.375167 -0.684438 -2.001679 -0.576354 -1.231720  0.658904 -1.468378   \n",
+       "3  1.022405  1.008039  1.052449  1.654570  0.008607 -0.398778  0.289674   \n",
+       "4 -0.794438  0.645365  0.034406 -1.091183  0.008607 -1.103900 -0.296343   \n",
        "\n",
        "   shoe_size  \n",
        "0  -0.109296  \n",
@@ -1927,7 +1929,7 @@
        "4   0.268311  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1951,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -2036,7 +2038,7 @@
        "4        0         2         2    45350    2"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2054,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -2096,7 +2098,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.388885</td>\n",
+       "      <td>-0.514924</td>\n",
        "      <td>-0.684438</td>\n",
        "      <td>0.034406</td>\n",
        "      <td>-0.404745</td>\n",
@@ -2112,7 +2114,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.015562</td>\n",
+       "      <td>-0.235410</td>\n",
        "      <td>0.040909</td>\n",
        "      <td>-0.983637</td>\n",
        "      <td>-1.777621</td>\n",
@@ -2128,7 +2130,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.202223</td>\n",
+       "      <td>-0.375167</td>\n",
        "      <td>-0.684438</td>\n",
        "      <td>-2.001679</td>\n",
        "      <td>-0.576354</td>\n",
@@ -2148,9 +2150,9 @@
       ],
       "text/plain": [
        "      waist      size   quality      hips  bra_size    height      bust  \\\n",
-       "0 -0.388885 -0.684438  0.034406 -0.404745 -0.611557  0.306343 -0.456166   \n",
-       "1 -0.015562  0.040909 -0.983637 -1.777621  0.008607 -1.103900 -0.349617   \n",
-       "2 -0.202223 -0.684438 -2.001679 -0.576354 -1.231720  0.658904 -1.468378   \n",
+       "0 -0.514924 -0.684438  0.034406 -0.404745 -0.611557  0.306343 -0.456166   \n",
+       "1 -0.235410  0.040909 -0.983637 -1.777621  0.008607 -1.103900 -0.349617   \n",
+       "2 -0.375167 -0.684438 -2.001679 -0.576354 -1.231720  0.658904 -1.468378   \n",
        "\n",
        "   shoe_size  item_id  category  cup_size  user_id  fit  \n",
        "0  -0.109296        0         2         4    47557    2  \n",
@@ -2158,7 +2160,7 @@
        "2   0.645919        0         2         2    19037    2  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2170,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2217,7 +2219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_file = '../data/modcloth_final_data_3_processed'\n",
+    "save_file = '../data/modcloth_final_data_4_processed'\n",
     "\n",
     "df_train.to_json(save_file+'_train.jsonl', orient='records', lines=True)\n",
     "df_val.to_json(save_file+'_valid.jsonl', orient='records', lines=True)\n",
