--- a/praca_inz/notebooks/data_preparation.ipynb
+++ b/praca_inz/notebooks/data_preparation.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "Name: shoe_size, dtype: int64"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,18 +1102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6503.91146134716\n",
-      "32272.6523991484\n",
-      "6247.937390626686\n",
-      "68.02795913832094\n",
-      "90004.57758514593\n"
+      "2968.7872397559845\n",
+      "17191.568394229158\n",
+      "2811.100379417967\n",
+      "6.000243730891647\n",
+      "44418.220885843715\n"
      ]
     }
    ],
@@ -1129,12 +1129,12 @@
     "    data = df_records[df_records[col].notnull()][col].value_counts()\n",
     "    uniq = df_records[df_records[col].notnull()][col].unique()\n",
     "\n",
-    "    # kl = distribution_based_creation(data, [test_subjects[i] for i in test_subjects[test_subjects > 1].keys()], data.keys())\n",
-    "    kl = distribution_based_creation(data, [test_subjects[i] for i in test_subjects.keys()], data.keys())\n",
+    "    kl = distribution_based_creation(data, [test_subjects[i] for i in test_subjects[test_subjects > 1].keys()], data.keys())\n",
+    "    # kl = distribution_based_creation(data, [test_subjects[i] for i in test_subjects.keys()], data.keys())\n",
     "\n",
-    "    dicto = {idx: kl[i] for i, idx in enumerate(test_subjects.keys())}\n",
-    "    # dicto = {idx: kl[i] for i, idx in enumerate(test_subjects[test_subjects <= 1].keys())}\n",
-    "    # dicto.update({idx: uniq[i%len(uniq)] for i, idx in enumerate(test_subjects[test_subjects <= 1].keys())})\n",
+    "    # dicto = {idx: kl[i] for i, idx in enumerate(test_subjects.keys())}\n",
+    "    dicto = {idx: kl[i] for i, idx in enumerate(test_subjects[test_subjects > 1].keys())}\n",
+    "    dicto.update({idx: uniq[i%len(uniq)] for i, idx in enumerate(test_subjects[test_subjects <= 1].keys())})\n",
     "    dicto.update({natives['user_id'][i]: natives[col][i] for i in natives.index})\n",
     "    change = [dicto[idx] for idx in df_records['user_id']]\n",
     "    df_records[col] = change"
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1856,58 +1856,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.514924</td>\n",
+       "      <td>-0.505139</td>\n",
        "      <td>-0.684438</td>\n",
-       "      <td>0.034406</td>\n",
-       "      <td>-0.404745</td>\n",
-       "      <td>-0.611557</td>\n",
+       "      <td>0.034913</td>\n",
+       "      <td>-0.458162</td>\n",
+       "      <td>-0.599384</td>\n",
        "      <td>0.306343</td>\n",
-       "      <td>-0.456166</td>\n",
-       "      <td>-0.109296</td>\n",
+       "      <td>-0.463381</td>\n",
+       "      <td>-0.112404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.235410</td>\n",
+       "      <td>-0.223299</td>\n",
        "      <td>0.040909</td>\n",
-       "      <td>-0.983637</td>\n",
-       "      <td>-1.777621</td>\n",
-       "      <td>0.008607</td>\n",
+       "      <td>-0.982505</td>\n",
+       "      <td>-1.679690</td>\n",
+       "      <td>-0.015213</td>\n",
        "      <td>-1.103900</td>\n",
-       "      <td>-0.349617</td>\n",
-       "      <td>-0.864510</td>\n",
+       "      <td>-0.363265</td>\n",
+       "      <td>1.496397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.375167</td>\n",
+       "      <td>-0.364219</td>\n",
        "      <td>-0.684438</td>\n",
-       "      <td>-2.001679</td>\n",
-       "      <td>-0.576354</td>\n",
-       "      <td>-1.231720</td>\n",
+       "      <td>-1.999923</td>\n",
+       "      <td>-1.679690</td>\n",
+       "      <td>-1.183555</td>\n",
        "      <td>0.658904</td>\n",
-       "      <td>-1.468378</td>\n",
-       "      <td>0.645919</td>\n",
+       "      <td>-1.414482</td>\n",
+       "      <td>0.531116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.022405</td>\n",
+       "      <td>1.044984</td>\n",
        "      <td>1.008039</td>\n",
-       "      <td>1.052449</td>\n",
-       "      <td>1.654570</td>\n",
-       "      <td>0.008607</td>\n",
+       "      <td>1.052332</td>\n",
+       "      <td>0.152603</td>\n",
+       "      <td>2.905643</td>\n",
        "      <td>-0.398778</td>\n",
-       "      <td>0.289674</td>\n",
-       "      <td>0.645919</td>\n",
+       "      <td>2.740325</td>\n",
+       "      <td>-0.112404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.794438</td>\n",
+       "      <td>-0.786980</td>\n",
        "      <td>0.645365</td>\n",
-       "      <td>0.034406</td>\n",
-       "      <td>-1.091183</td>\n",
-       "      <td>0.008607</td>\n",
+       "      <td>0.034913</td>\n",
+       "      <td>-1.068926</td>\n",
+       "      <td>-0.015213</td>\n",
        "      <td>-1.103900</td>\n",
-       "      <td>-0.296343</td>\n",
-       "      <td>0.268311</td>\n",
+       "      <td>-0.313208</td>\n",
+       "      <td>0.209356</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1915,21 +1915,21 @@
       ],
       "text/plain": [
        "      waist      size   quality      hips  bra_size    height      bust  \\\n",
-       "0 -0.514924 -0.684438  0.034406 -0.404745 -0.611557  0.306343 -0.456166   \n",
-       "1 -0.235410  0.040909 -0.983637 -1.777621  0.008607 -1.103900 -0.349617   \n",
-       "2 -0.375167 -0.684438 -2.001679 -0.576354 -1.231720  0.658904 -1.468378   \n",
-       "3  1.022405  1.008039  1.052449  1.654570  0.008607 -0.398778  0.289674   \n",
-       "4 -0.794438  0.645365  0.034406 -1.091183  0.008607 -1.103900 -0.296343   \n",
+       "0 -0.505139 -0.684438  0.034913 -0.458162 -0.599384  0.306343 -0.463381   \n",
+       "1 -0.223299  0.040909 -0.982505 -1.679690 -0.015213 -1.103900 -0.363265   \n",
+       "2 -0.364219 -0.684438 -1.999923 -1.679690 -1.183555  0.658904 -1.414482   \n",
+       "3  1.044984  1.008039  1.052332  0.152603  2.905643 -0.398778  2.740325   \n",
+       "4 -0.786980  0.645365  0.034913 -1.068926 -0.015213 -1.103900 -0.313208   \n",
        "\n",
        "   shoe_size  \n",
-       "0  -0.109296  \n",
-       "1  -0.864510  \n",
-       "2   0.645919  \n",
-       "3   0.645919  \n",
-       "4   0.268311  "
+       "0  -0.112404  \n",
+       "1   1.496397  \n",
+       "2   0.531116  \n",
+       "3  -0.112404  \n",
+       "4   0.209356  "
       ]
      },
-     "execution_count": 205,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2038,7 @@
        "4        0         2         2    45350    2"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2098,14 +2098,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.514924</td>\n",
+       "      <td>-0.505139</td>\n",
        "      <td>-0.684438</td>\n",
-       "      <td>0.034406</td>\n",
-       "      <td>-0.404745</td>\n",
-       "      <td>-0.611557</td>\n",
+       "      <td>0.034913</td>\n",
+       "      <td>-0.458162</td>\n",
+       "      <td>-0.599384</td>\n",
        "      <td>0.306343</td>\n",
-       "      <td>-0.456166</td>\n",
-       "      <td>-0.109296</td>\n",
+       "      <td>-0.463381</td>\n",
+       "      <td>-0.112404</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
@@ -2114,14 +2114,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.235410</td>\n",
+       "      <td>-0.223299</td>\n",
        "      <td>0.040909</td>\n",
-       "      <td>-0.983637</td>\n",
-       "      <td>-1.777621</td>\n",
-       "      <td>0.008607</td>\n",
+       "      <td>-0.982505</td>\n",
+       "      <td>-1.679690</td>\n",
+       "      <td>-0.015213</td>\n",
        "      <td>-1.103900</td>\n",
-       "      <td>-0.349617</td>\n",
-       "      <td>-0.864510</td>\n",
+       "      <td>-0.363265</td>\n",
+       "      <td>1.496397</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -2130,14 +2130,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.375167</td>\n",
+       "      <td>-0.364219</td>\n",
        "      <td>-0.684438</td>\n",
-       "      <td>-2.001679</td>\n",
-       "      <td>-0.576354</td>\n",
-       "      <td>-1.231720</td>\n",
+       "      <td>-1.999923</td>\n",
+       "      <td>-1.679690</td>\n",
+       "      <td>-1.183555</td>\n",
        "      <td>0.658904</td>\n",
-       "      <td>-1.468378</td>\n",
-       "      <td>0.645919</td>\n",
+       "      <td>-1.414482</td>\n",
+       "      <td>0.531116</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -2150,17 +2150,17 @@
       ],
       "text/plain": [
        "      waist      size   quality      hips  bra_size    height      bust  \\\n",
-       "0 -0.514924 -0.684438  0.034406 -0.404745 -0.611557  0.306343 -0.456166   \n",
-       "1 -0.235410  0.040909 -0.983637 -1.777621  0.008607 -1.103900 -0.349617   \n",
-       "2 -0.375167 -0.684438 -2.001679 -0.576354 -1.231720  0.658904 -1.468378   \n",
+       "0 -0.505139 -0.684438  0.034913 -0.458162 -0.599384  0.306343 -0.463381   \n",
+       "1 -0.223299  0.040909 -0.982505 -1.679690 -0.015213 -1.103900 -0.363265   \n",
+       "2 -0.364219 -0.684438 -1.999923 -1.679690 -1.183555  0.658904 -1.414482   \n",
        "\n",
        "   shoe_size  item_id  category  cup_size  user_id  fit  \n",
-       "0  -0.109296        0         2         4    47557    2  \n",
-       "1  -0.864510        0         2         2    28324    2  \n",
-       "2   0.645919        0         2         2    19037    2  "
+       "0  -0.112404        0         2         4    47557    2  \n",
+       "1   1.496397        0         2         2    28324    2  \n",
+       "2   0.531116        0         2         2    19037    2  "
       ]
      },
-     "execution_count": 207,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2172,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2202,24 +2202,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create random train-validation-test splits\n",
     "# 80-10-10 as in the paper\n",
     "from sklearn.model_selection import train_test_split\n",
-    "df_train, df_val_test = train_test_split(df, random_state=10, test_size=0.2)\n",
-    "df_val, df_test = train_test_split(df_val_test, random_state=10, test_size=0.5)"
+    "df_train, df_val_test = train_test_split(df, random_state=420, test_size=0.5)\n",
+    "df_val, df_test = train_test_split(df_val_test, random_state=420, test_size=0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_file = '../data/modcloth_final_data_4_processed'\n",
+    "save_file = '../data/modcloth_final_data_2_4225_processed'\n",
     "\n",
     "df_train.to_json(save_file+'_train.jsonl', orient='records', lines=True)\n",
     "df_val.to_json(save_file+'_valid.jsonl', orient='records', lines=True)\n",
