--- a/praca_inz/notebooks/data_exploration.ipynb
+++ b/praca_inz/notebooks/data_exploration.ipynb
@@ -155,13 +155,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +197,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,13 +206,6 @@
     "df_records.drop(['user_name', 'length', 'review_summary', 'review_text'], axis=1, inplace=True)\n",
     "df_records.dtypes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -233,19 +219,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_records.drop(['bust', 'shoe_width'], axis=1, inplace=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -436,18 +415,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.impute import SimpleImputer\n",
-    "median_imputer = SimpleImputer(missing_values=np.nan, strategy='median')\n",
+    "median_imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
     "frequent_imputer = SimpleImputer(missing_values=np.nan, strategy='most_frequent')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,13 +586,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -622,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,19 +618,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_records['height'] = df_records['height'].apply(get_float_height)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -669,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -705,68 +670,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.027082</td>\n",
+       "      <td>-2.344502e+00</td>\n",
        "      <td>-0.684438</td>\n",
-       "      <td>1.058979</td>\n",
-       "      <td>-0.396924</td>\n",
-       "      <td>-0.635700</td>\n",
+       "      <td>1.059023</td>\n",
+       "      <td>-0.491846</td>\n",
+       "      <td>-6.350496e-01</td>\n",
        "      <td>0.306343</td>\n",
-       "      <td>-0.063125</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.936889</td>\n",
+       "      <td>-3.227022e-01</td>\n",
        "      <td>0.040909</td>\n",
-       "      <td>-0.956397</td>\n",
-       "      <td>-2.050813</td>\n",
-       "      <td>0.008324</td>\n",
+       "      <td>-0.956356</td>\n",
+       "      <td>-2.160182</td>\n",
+       "      <td>8.976025e-03</td>\n",
        "      <td>-1.103900</td>\n",
-       "      <td>-0.063125</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.045096</td>\n",
+       "      <td>-1.333602e+00</td>\n",
        "      <td>-0.684438</td>\n",
-       "      <td>-1.964085</td>\n",
-       "      <td>-0.190188</td>\n",
-       "      <td>-1.279724</td>\n",
+       "      <td>-1.964045</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.279075e+00</td>\n",
        "      <td>0.658904</td>\n",
-       "      <td>1.220767</td>\n",
+       "      <td>1.100998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.045096</td>\n",
+       "      <td>-1.077431e-14</td>\n",
        "      <td>1.008039</td>\n",
-       "      <td>1.058979</td>\n",
-       "      <td>-0.190188</td>\n",
-       "      <td>0.008324</td>\n",
+       "      <td>1.059023</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-2.288039e-15</td>\n",
        "      <td>-0.398778</td>\n",
-       "      <td>-0.063125</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.045096</td>\n",
+       "      <td>-1.077431e-14</td>\n",
        "      <td>0.645365</td>\n",
-       "      <td>1.058979</td>\n",
-       "      <td>-0.190188</td>\n",
-       "      <td>0.008324</td>\n",
+       "      <td>1.059023</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.976025e-03</td>\n",
        "      <td>-1.103900</td>\n",
-       "      <td>-0.063125</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      waist      size   quality      hips  bra_size    height  shoe_size\n",
-       "0 -1.027082 -0.684438  1.058979 -0.396924 -0.635700  0.306343  -0.063125\n",
-       "1  0.936889  0.040909 -0.956397 -2.050813  0.008324 -1.103900  -0.063125\n",
-       "2 -0.045096 -0.684438 -1.964085 -0.190188 -1.279724  0.658904   1.220767\n",
-       "3 -0.045096  1.008039  1.058979 -0.190188  0.008324 -0.398778  -0.063125\n",
-       "4 -0.045096  0.645365  1.058979 -0.190188  0.008324 -1.103900  -0.063125"
+       "          waist      size   quality      hips      bra_size    height  \\\n",
+       "0 -2.344502e+00 -0.684438  1.059023 -0.491846 -6.350496e-01  0.306343   \n",
+       "1 -3.227022e-01  0.040909 -0.956356 -2.160182  8.976025e-03 -1.103900   \n",
+       "2 -1.333602e+00 -0.684438 -1.964045  0.000000 -1.279075e+00  0.658904   \n",
+       "3 -1.077431e-14  1.008039  1.059023  0.000000 -2.288039e-15 -0.398778   \n",
+       "4 -1.077431e-14  0.645365  1.059023  0.000000  8.976025e-03 -1.103900   \n",
+       "\n",
+       "   shoe_size  \n",
+       "0   0.000000  \n",
+       "1   0.000000  \n",
+       "2   1.100998  \n",
+       "3   0.000000  \n",
+       "4   0.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,13 +754,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -797,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +847,7 @@
        "4        0         2         2    45350    2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -941,13 +906,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.027082</td>\n",
+       "      <td>-2.344502</td>\n",
        "      <td>-0.684438</td>\n",
-       "      <td>1.058979</td>\n",
-       "      <td>-0.396924</td>\n",
-       "      <td>-0.635700</td>\n",
+       "      <td>1.059023</td>\n",
+       "      <td>-0.491846</td>\n",
+       "      <td>-0.635050</td>\n",
        "      <td>0.306343</td>\n",
-       "      <td>-0.063125</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
@@ -956,13 +921,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.936889</td>\n",
+       "      <td>-0.322702</td>\n",
        "      <td>0.040909</td>\n",
-       "      <td>-0.956397</td>\n",
-       "      <td>-2.050813</td>\n",
-       "      <td>0.008324</td>\n",
+       "      <td>-0.956356</td>\n",
+       "      <td>-2.160182</td>\n",
+       "      <td>0.008976</td>\n",
        "      <td>-1.103900</td>\n",
-       "      <td>-0.063125</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -971,13 +936,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.045096</td>\n",
+       "      <td>-1.333602</td>\n",
        "      <td>-0.684438</td>\n",
-       "      <td>-1.964085</td>\n",
-       "      <td>-0.190188</td>\n",
-       "      <td>-1.279724</td>\n",
+       "      <td>-1.964045</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.279075</td>\n",
        "      <td>0.658904</td>\n",
-       "      <td>1.220767</td>\n",
+       "      <td>1.100998</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -990,9 +955,9 @@
       ],
       "text/plain": [
        "      waist      size   quality      hips  bra_size    height  shoe_size  \\\n",
-       "0 -1.027082 -0.684438  1.058979 -0.396924 -0.635700  0.306343  -0.063125   \n",
-       "1  0.936889  0.040909 -0.956397 -2.050813  0.008324 -1.103900  -0.063125   \n",
-       "2 -0.045096 -0.684438 -1.964085 -0.190188 -1.279724  0.658904   1.220767   \n",
+       "0 -2.344502 -0.684438  1.059023 -0.491846 -0.635050  0.306343   0.000000   \n",
+       "1 -0.322702  0.040909 -0.956356 -2.160182  0.008976 -1.103900   0.000000   \n",
+       "2 -1.333602 -0.684438 -1.964045  0.000000 -1.279075  0.658904   1.100998   \n",
        "\n",
        "   item_id  category  cup_size  user_id  fit  \n",
        "0        0         2         4    47557    2  \n",
@@ -1000,7 +965,7 @@
        "2        0         2         2    19037    2  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1034,13 +999,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1049,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,28 +1020,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_file = '../data/modcloth_final_data_processed'\n",
+    "save_file = '../data/modcloth_final_data_mean_processed'\n",
     "\n",
     "df_train.to_json(save_file+'_train.jsonl', orient='records', lines=True)\n",
     "df_val.to_json(save_file+'_valid.jsonl', orient='records', lines=True)\n",
     "df_test.to_json(save_file+'_test.jsonl', orient='records', lines=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
