--- a/praca_inz/notebooks/data_exploration.ipynb
+++ b/praca_inz/notebooks/data_exploration.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,96 +484,96 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>123373</td>\n",
-       "      <td>29.0</td>\n",
+       "      <td>29.000000</td>\n",
        "      <td>7.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>d</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>34.0</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>34.000000</td>\n",
        "      <td>new</td>\n",
        "      <td>5ft 6in</td>\n",
        "      <td>small</td>\n",
        "      <td>991571</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>8.145818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>123373</td>\n",
-       "      <td>31.0</td>\n",
+       "      <td>31.000000</td>\n",
        "      <td>13.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>b</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>36.0</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>36.000000</td>\n",
        "      <td>new</td>\n",
        "      <td>5ft 2in</td>\n",
        "      <td>small</td>\n",
        "      <td>587883</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>8.145818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>123373</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>30.000000</td>\n",
        "      <td>7.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>b</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>32.0</td>\n",
+       "      <td>40.358501</td>\n",
+       "      <td>32.000000</td>\n",
        "      <td>new</td>\n",
        "      <td>5ft 7in</td>\n",
        "      <td>small</td>\n",
        "      <td>395665</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>9.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>123373</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>31.319223</td>\n",
        "      <td>21.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>dd/e</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>36.0</td>\n",
+       "      <td>40.358501</td>\n",
+       "      <td>35.972125</td>\n",
        "      <td>new</td>\n",
        "      <td>5ft 4in</td>\n",
        "      <td>fit</td>\n",
        "      <td>875643</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>8.145818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>123373</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>31.319223</td>\n",
        "      <td>18.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>b</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>36.0</td>\n",
+       "      <td>40.358501</td>\n",
+       "      <td>36.000000</td>\n",
        "      <td>new</td>\n",
        "      <td>5ft 2in</td>\n",
        "      <td>small</td>\n",
        "      <td>944840</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>8.145818</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   item_id  waist  size  quality cup_size  hips  bra_size category   height  \\\n",
-       "0   123373   29.0   7.0      5.0        d  38.0      34.0      new  5ft 6in   \n",
-       "1   123373   31.0  13.0      3.0        b  30.0      36.0      new  5ft 2in   \n",
-       "2   123373   30.0   7.0      2.0        b  39.0      32.0      new  5ft 7in   \n",
-       "3   123373   30.0  21.0      5.0     dd/e  39.0      36.0      new  5ft 4in   \n",
-       "4   123373   30.0  18.0      5.0        b  39.0      36.0      new  5ft 2in   \n",
+       "   item_id      waist  size  quality cup_size       hips   bra_size category  \\\n",
+       "0   123373  29.000000   7.0      5.0        d  38.000000  34.000000      new   \n",
+       "1   123373  31.000000  13.0      3.0        b  30.000000  36.000000      new   \n",
+       "2   123373  30.000000   7.0      2.0        b  40.358501  32.000000      new   \n",
+       "3   123373  31.319223  21.0      5.0     dd/e  40.358501  35.972125      new   \n",
+       "4   123373  31.319223  18.0      5.0        b  40.358501  36.000000      new   \n",
        "\n",
-       "     fit  user_id  shoe_size  \n",
-       "0  small   991571        8.0  \n",
-       "1  small   587883        8.0  \n",
-       "2  small   395665        9.0  \n",
-       "3    fit   875643        8.0  \n",
-       "4  small   944840        8.0  "
+       "    height    fit  user_id  shoe_size  \n",
+       "0  5ft 6in  small   991571   8.145818  \n",
+       "1  5ft 2in  small   587883   8.145818  \n",
+       "2  5ft 7in  small   395665   9.000000  \n",
+       "3  5ft 4in    fit   875643   8.145818  \n",
+       "4  5ft 2in  small   944840   8.145818  "
       ]
      },
      "execution_count": 11,
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "4   0.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
        "4        0         2         2    45350    2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "2        0         2         2    19037    2  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1007,24 +1007,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create random train-validation-test splits\n",
     "# 80-10-10 as in the paper\n",
     "from sklearn.model_selection import train_test_split\n",
-    "df_train, df_val_test = train_test_split(df_records, random_state=10, test_size=0.2)\n",
-    "df_val, df_test = train_test_split(df_val_test, random_state=10, test_size=0.5)"
+    "df_train, df_val_test = train_test_split(df_records, random_state=420, test_size=0.2)\n",
+    "df_val, df_test = train_test_split(df_val_test, random_state=420, test_size=0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_file = '../data/modcloth_final_data_mean_processed'\n",
+    "save_file = '../data/modcloth_final_data_processed_seed_420'\n",
     "\n",
     "df_train.to_json(save_file+'_train.jsonl', orient='records', lines=True)\n",
     "df_val.to_json(save_file+'_valid.jsonl', orient='records', lines=True)\n",
